<resources>
    <string name="app_name">MAD - Level 1: Task 2</string>
    <string name="tv_title">Conjunction (AND)</string>
    <string name="btn_success_label">Submit</string>
    <string name="tv_input_a">A</string>
    <string name="tv_input_b">B</string>
    <string name="tv_conjunction_result_input_label">A ^ B</string>
    <string name="tv_input_truth">T</string>
    <string name="tv_input_false">F</string>
    <string name="response">Number of Correct Answers %d</string>
</resources>
